- GoI can no longer prevent genocide's strain.
[H] makeshift underground watery area added for exhibition.
[B] client crushed when having 2 same books with different inscription.
    (not really fixed; just hacked around)

05/03/2002 (Jir)
- some more traps.
- exported cfg to LUA (eg. '/ cfg.store_turns=10')
- low-sanity alart and 'flushback' hallucination
- fixed watery levels (see generate.c)
[B] lantern refilling 
[B] watery respawning crashed
[B] a trap caused buggy screen like ^^^^^^^^^^^^^^^^^^^^^^^

** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack :)

==== below this line are the unfixed bugs known ====
[B] rebooting server always make floors disappear;
    monsters are preserved; only cave disappears.
[B] Self-reproducing black trap
[B] Panic save often enters into infinite loop.
[B] House doors still seem to crash sometimes.
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] CURSE_x does 100+ dmg on 50ft?
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
[B] /rec won't work if to wilderness? (admin)
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] log-file viewer(&6) leaves messy screen when done.
[B] [Bashing for beginners] contains 'Darkness Storm' etc.

==== below this line are changes to be done in the future ====
[minor ones]
- recall-depth array for each dungeons/towers
- full colour-support in show_file
- quiver/tool slot (not a monster! ;)
- sort unique-list according to the level
- tombstone screen
- wilderness compacting (how about 'compacting' townies?)
- display "non-scoring mode" in '@' screen
- torch/lantern shouldn't be EASY_KNOWN.
- Nazgul rings should have corresponding names
- implement EGO_WOUNDING(ie. monster bleeding)
* Trap ideas
  - no return trap should steal books also?
  - innondation trap
  - telekinesis trap
  - death molds trap
  - house-door-opening trap
- perma-light should be rarer